2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs :
	  Dependent change with XmlSchemaElement internal property.

2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : Throw exception only in case of errors.

2004-01-08  Lluis Sanchez Gual  <lluis@ximian.com>

	* XsdValidatingReader.cs: In MoveToAttribute(name), if "name" is a default
	attribute, search for the attribute ignoring the namespace. This matches
	MS.NET behavior (and fixes bug #52557).

2004-01-08  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : Fixed in reflection to 
	  XmlSchemaObjectTableGetEnumerator.Value change.

2004-01-08  Nick Drochak <ndrochak@ieee.org>

	* XsdParticleValidationState.cs: Remove unreachable code.

2003-12-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdValidatingReader.cs : When source Reader has schema context, it
	  should return source's schema type if this class cannot provide it.

2003-12-08  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdValidatingReader.cs : patch by David Sheldon. Base type's facet 
	  validation should also be done.

2003-12-07  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdValidatingReader.cs : FindElement() should use argument names
	  (patch by David Sheldon).  Warning elimination.

2003-10-26  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdValidatingReader.cs : xsi:type should be normalized. More cleanup.
	* XsdParticleValidationState.cs : Reverted default content processing
	  to lax. It is msxsdtest/wildCard/wildG038.xsd which looks incorrect.

2003-10-25  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdValidatingReader.cs : Removed MonoTODO which was implemented in
	  XmlValidatingreader as a result. Added xsi:nil normalization.

2003-10-23  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XsdParticleValidationState.cs : Default content processing shoule be
	  lax.
	* XsdValidatingReader.cs : If there is no trial to get schemas for